--- a/style.css
+++ b/style.css
@@ -1,18 +1,48 @@
 .main {
     margin-top:100px;
+    display:block;
+
 }
 
 
 .logo {
     width:300px;
     display:block;
+    margin-bottom:20px;
+    margin-left:auto;
+    margin-right:auto;
 }
 .search {
     width:400px;
     display:block;
+    margin-bottom:20px;
+    margin-left:auto;
+    margin-right:auto;
+    line-height: 24px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border: 1px solid #dfe1e5;
+    border-radius: 24px;
 }
 body {
     margin:0;
+}
+.btn-wrapper {
+    display: flex;
+    justify-content: center;
+}
+.btn {
+    margin-left:4px;
+    margin-right:4px;
+    margin-top:30px;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    background-color: #dfe1e5;
+    border-radius: 5px;
+    border: none;
+    font-weight: bold;
 }
 
 
